--- a/frontend/components/phone-viewer/template.hbs
+++ b/frontend/components/phone-viewer/template.hbs
@@ -13,3 +13,6 @@
   {{/each}}
 
 </ul>
+
+<button data-element="back-button">back to catalogue</button>
+<button data-element="add-to-basket">add to basket</button>
