shopping cart was added

--- a/frontend/components/phone-viewer/template.hbs
+++ b/frontend/components/phone-viewer/template.hbs
@@ -15,4 +15,4 @@
 </ul>
 
 <button data-element="back-button">back to catalogue</button>
-<button data-element="add-to-basket">add to basket</button>
+<button data-element="add-button">add to basket</button>
