--- a/frontend/components/shopping-cart/template.hbs
+++ b/frontend/components/shopping-cart/template.hbs
@@ -1,6 +1,15 @@
 <h4>Shopping cart</h4>
-<ul>
-  {{#each products as |product|}}
-    <li>{{ product }}</li>
-  {{/each}}
-</ul>
+
+{{#if products.length }}
+
+  <ul>
+    {{#each products as |product|}}
+      <li>{{ product }}</li>
+    {{/each}}
+  </ul>
+
+{{else}}
+
+  <p>No products yet</p>
+
+{{/if}}
